Minor cleanup and fix attribution being covered by UI

--- a/web/frontend/src/css/app.scss
+++ b/web/frontend/src/css/app.scss
@@ -3,7 +3,7 @@
 .maplibregl-map {
   position: fixed;
   width: 100vw;
-  height: 100vh;
+  height: 0;
   margin: 0;
   padding: 0;
   display: flex;
